--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,15 @@
 <div class="mainnav">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand">
-            <img src="../../assets/image/fullStack.png" alt="nazila-azabdaftar" class="d-inline-block align-text-center">
+            <img src="../../assets/image/newLogoGreen.png" alt="nazila-azabdaftar" class="d-inline-block align-text-center">
             <div class="navTxt"></div>
         </a>
         <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+
+
         <div class="collapse navbar-collapse ps-5" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
