aside Left with social networks finished

--- a/src/app/bothsideaside/bothsideaside.component.html
+++ b/src/app/bothsideaside/bothsideaside.component.html
@@ -1,1 +1,21 @@
-<p>bothsideaside works!</p>
+<div class="container-fluid ">
+    <div class="row sidebar">
+        <div class="col align-self-end ">
+
+            <!-- <i class="bi bi-github"></i>
+            <i class="bi bi-linkedin"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi vline"></i> -->
+
+            <ul class="social-networks bounce">
+                <li><a href="https://www.linkedin.com/" class="icon-linkedin">LinkedIn</a></li>
+                <!-- <li><a href="https://www.facebook.com/" class="icon-facebook">Facebook</a></li> -->
+                <li><a href="https://github.com/nazilaAz" class="icon-github">github</a></li>
+                <!-- <li><a href="https://pinterest.com" class="icon-pinterest">Pinterest</a></li> -->
+                <li><a href="#" class="icon-instagram">Instagram</a></li>
+            </ul>
+
+        </div>
+    </div>
+
+</div>
