--- a/src/app/bothsideaside/bothsideaside.component.html
+++ b/src/app/bothsideaside/bothsideaside.component.html
@@ -17,5 +17,14 @@
 
         </div>
     </div>
+    <div class="row sidebarright">
+        <div class="col align-self-start ">
+
+
+
+
+
+        </div>
+    </div>
 
 </div>
