--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,12 +29,12 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/"><span>&#60;</span>/Resume<span>&#62;</span></a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/">Contact me</a>
-                </li>
-                <li class="nav-item">
+                </li> -->
+                <!-- <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="https://github.com/nazilaAz"><i class="bi bi-github"></i></a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
