home infos added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
 <app-bothsideaside></app-bothsideaside>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
