--- a/src/app/bothsideaside/bothsideaside.component.html
+++ b/src/app/bothsideaside/bothsideaside.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid ">
+<div class="container-sidebar">
     <div class="row sidebar">
         <div class="col align-self-end ">
 
