--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,26 @@
-<p>homepage works!</p>
+<!-- <div class="homegrid">
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
+        <div class="col">
+            <h3 class="animate__animated animate__fadeInLeft text-start">Hi, My name is</h3>
+            <h1 class="text-start">Nazila Azabdaftar</h1>
+            <p class="text-start">I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Front-End.</p>
+        </div>
+        <div class="col imgcol">
+            <img src="../../assets/image/iam.png" class="img-thumbnail" alt="I am">
+        </div>
+
+    </div>
+</div> -->
+
+<div class="container-name text-center">
+    <div class="row row-cols-auto gx-5">
+        <div class="col">
+            <div class="p-3"><img src="../../assets/image/iam.png" class="img-thumbnail" alt="I am"></div>
+        </div>
+        <div class="col">
+            <div class="p-3 animate__animated animate__fadeInLeft text-start hi">Hi, My name is</div>
+            <div class="p-3 text-start name">Nazila</div>
+            <div class="p-3 text-start desc">I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Front-End.</div>
+        </div>
+    </div>
+</div>
