--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -25,7 +25,7 @@ $greencolor:#64ffda;
                     background-size: 200% 100%;
                     background-position: -100%;
                     display: inline-block;
-                    padding: 0 .8rem;
+                    padding: 0 1.8rem;
                     position: relative;
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
