--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files *//*# sourceMappingURL=styles.css.map */
+@media screen and (min-width: 1441px) {
+  body {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+  body {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  body {
+    font-size: 18px;
+  }
+}/*# sourceMappingURL=styles.css.map */
