--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,24 @@
 @media screen and (min-width: 1441px) {
   body {
     font-size: 24px;
+    background-color: #0a192f;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1440px) {
   body {
     font-size: 20px;
+    background-color: #0a192f;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
   body {
     font-size: 18px;
+    background-color: #0a192f;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
   body {
     font-size: 18px;
+    background-color: #0a192f;
   }
 }/*# sourceMappingURL=styles.css.map */
