--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -8,6 +8,7 @@
 .container-name {
   width: 60vw;
   margin: 5rem auto;
+  background-color: #0a192f;
 }
 .container-name .row .col .hi {
   font-size: 1rem;
