--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,17 +1,33 @@
-<div class="container card-container">
+<!-- <div class="container card-container">
     <div class="card" *ngFor="let courseItem of course">
 
         <div class="card-info">
-            <div class="card-title">{{ courseItem.name }}</div>
-            <div class="card-image"><img src="../../assets/image/{{ courseItem.img }}"></div>
+            <div class="card-title">{{ courseItem[0] }}</div>
+            <div class="card-image"><img src="../../assets/image/{{ courseItem[1] }}"></div>
+        </div>
+    </div>
+</div> -->
 
-            <div class="card-detail" *ngFor="let skilFront of frontend">
-                <div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar progress-bar-striped" [style.width.%]=""></div>
+
+<!-- <div class="card-detail">
+    <div class="progress" *ngFor="let skillpercent of percent" role="progressbar" attr.aria-valuenow="{{skillpercent}}" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped" [style.width]="skillpercent+'%'">{{skillpercent}}%</div>
+    </div>
+    <div class="card-image" *ngFor="let skillItem of frontend"><img src="../../assets/image/{{ skillItem.img }}"></div>
+</div> -->
+
+<div class="container text-center card-container2">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3">
+        <div class="col" *ngFor="let item of courses">
+            <div class="card" style="width: 18rem;">
+                <img src="../../assets/image/{{ item.img }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">{{item.name }}</p>
                 </div>
             </div>
         </div>
-
-
+        <div class="col">Column</div>
+        <div class="col">Column</div>
+        <div class="col">Column</div>
     </div>
 </div>
