--- a/src/app/skill/skill.component.scss
+++ b/src/app/skill/skill.component.scss
@@ -3,7 +3,7 @@ $backGr-main:#0a192f;
 $fontColor-first: #ccd6f6;
 $greencolor:#64ffda;
 .container {
-    width: 85%;
+    // width: 85%;
     height: auto;
     margin: 5rem auto;
     .card-container {
@@ -30,39 +30,16 @@ $greencolor:#64ffda;
         border: 1px solid rgba(128, 128, 128, 0.15);
         box-sizing: border-box;
         text-align: center;
+        color: white;
+        img {
+            width: 60%;
+            height: auto;
+        }
+        .card-img-top {
+            align-self: center;
+            padding: .9rem 0;
+        }
     }
-    // .card .card-social {
-    //     position: absolute;
-    //     height: 75px;
-    //     width: 100%;
-    //     background: red;
-    //     border-bottom-right-radius: 5px;
-    //     border-bottom-left-radius: 5px;
-    //     background: rgba(0, 0, 0, 0.6);
-    //     box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
-    //     top: 275px;
-    // }
-    // .card .card-social ul {
-    //     padding: 0;
-    //     margin: 0;
-    //     list-style: none;
-    //     width: 100%;
-    //     height: 100%;
-    //     display: flex;
-    //     justify-content: space-around;
-    // }
-    // .card .card-social ul li {
-    //     height: 100%;
-    //     text-align: center;
-    //     line-height: 75px;
-    //     font-size: 1.5em;
-    //     color: rgba(255, 255, 255, 0.85);
-    //     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    // }
-    // .card .card-social ul li:hover {
-    //     text-shadow: 7px 7px 5px rgba(0, 0, 0, 0.7);
-    //     transition: all 0.1s linear;
-    // }
     .card .card-image {
         width: 100%;
         height: 275px;
