--- a/src/app/skill/skill.component.css
+++ b/src/app/skill/skill.component.css
@@ -36,6 +36,15 @@
   align-self: center;
   padding: 0.9rem 0;
 }
+.container .card .card-img-topFront {
+  width: 20%;
+  height: auto;
+  align-self: center;
+  padding: 0.8rem 0;
+}
+.container .card .card-body .progress {
+  --bs-progress-bar-color: black !important;
+}
 .container .card .card-image {
   width: 100%;
   height: 275px;
