--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/project" routerLinkActive="active">Projects</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/test" routerLinkActive="test">Projects</a>
+                </li>
             </ul>
         </div>
         <div class="collapse navbar-collapse justify-content-end ps-5" id="navbarNav">
