--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 .section {
   font-family: "Poppins", Open Sans;
   display: flex;
@@ -33,7 +34,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-transform: translate3d(0, 0, 0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-color: #ffffff;
@@ -57,4 +57,78 @@
   transform: rotateY(180deg);
   background-color: #00a2fa;
   color: #ffffff;
+}
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.content {
+  height: 100vh;
+  background: linear-gradient(to bottom right, aqua, lightblue);
+  text-align: center;
+  padding: 4em 0;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 25%;
+  position: relative;
+  height: 25em;
+  perspective: 150em;
+}
+.card__side {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25em;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transition: all 0.6s ease;
+  box-shadow: 1em 1em 2em rgba(0, 0, 0, 0.2);
+}
+.card__side--front {
+  background-color: #FFF;
+}
+.card__side--back {
+  color: #FFF;
+  transform: rotateY(180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to right bottom, #2998FF, #5643FA);
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to right bottom, #FFB900, #FF7730);
+}
+.card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card__side--back {
+  transform: rotate(0);
+}
+.card__description {
+  text-transform: uppercase;
+  font-size: 5em;
+  padding: 1em 0;
+}
+.card__description svg {
+  width: 1.5em;
+  height: 1.5em;
+  fill: #FFF;
 }/*# sourceMappingURL=test.component.css.map */
