--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,64 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
-.section {
-  font-family: "Poppins", Open Sans;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-content: center;
-  min-height: 100vh;
-  background: #f8f8f8;
-}
-
-.flip-box-row {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 80vw;
-  margin: 3vw 3vw 0;
-}
-
-.flip-box-column {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-box-row:hover .flip-box-column {
-  transform: rotateY(180deg);
-}
-
-.flip-box-front,
-.flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background-color: #ffffff;
-  border-radius: 8px 8px 8px 8px;
-  overflow: hidden;
-  padding: 5%;
-  box-shadow: 0px 10px 60px 0px rgba(39, 39, 52, 0.06);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  line-height: 1.5em;
-}
-
-.flip-box-front img {
-  width: 20%;
-  height: auto;
-}
-
-.flip-box-back {
-  transform: rotateY(180deg);
-  background-color: #00a2fa;
-  color: #ffffff;
-}
-
 *,
 *::after,
 *::before {
@@ -73,7 +13,6 @@ body {
 
 .content {
   height: 100vh;
-  background: linear-gradient(to bottom right, aqua, lightblue);
   text-align: center;
   padding: 4em 0;
 }
@@ -103,6 +42,10 @@ body {
 .card__side--front {
   background-color: #FFF;
 }
+.card__side--front img {
+  width: 50%;
+  height: auto;
+}
 .card__side--back {
   color: #FFF;
   transform: rotateY(180deg);
@@ -124,10 +67,10 @@ body {
 }
 .card__description {
   text-transform: uppercase;
-  font-size: 5em;
+  font-size: 2em;
   padding: 1em 0;
 }
-.card__description svg {
+.card__description img {
   width: 1.5em;
   height: 1.5em;
   fill: #FFF;
