--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,69 +1,3 @@
-.section {
-    font-family: 'Poppins', Open Sans;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: center;
-    min-height: 100vh;
-    background: #f8f8f8;
-}
-
-.flip-box-row {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    -webkit-perspective: 80vw;
-    perspective: 80vw;
-    margin: 3vw 3vw 0;
-}
-
-.flip-box-column {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: transform 0.8s;
-    transition: transform 0.8s;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-
-.flip-box-row:hover .flip-box-column {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-
-.flip-box-front,
-.flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    // -webkit-transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    background-color: #ffffff;
-    border-radius: 8px 8px 8px 8px;
-    overflow: hidden;
-    padding: 5%;
-    box-shadow: 0px 10px 60px 0px rgba(39, 39, 52, 0.06);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    line-height: 1.5em;
-}
-
-.flip-box-front img {
-    width: 20%;
-    height: auto;
-}
-
-.flip-box-back {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-    background-color: #00a2fa;
-    color: #ffffff;
-}
-
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
@@ -85,7 +19,7 @@ body {
 
 .content {
     height: 100vh;
-    background: linear-gradient(to bottom right, aqua, lightblue);
+    // background: linear-gradient(to bottom right, aqua, lightblue);
     text-align: center;
     padding: 4em 0;
 }
@@ -111,6 +45,10 @@ body {
         box-shadow: 1em 1em 2em rgba(0, 0, 0, .2);
         &--front {
             background-color: #FFF;
+            img {
+                width: 50%;
+                height: auto;
+            }
         }
         &--back {
             color: #FFF;
@@ -135,9 +73,9 @@ body {
     }
     &__description {
         text-transform: uppercase;
-        font-size: 5em;
+        font-size: 2em;
         padding: 1em 0;
-        svg {
+        img {
             width: 1.5em;
             height: 1.5em;
             fill: #FFF;
