--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -51,13 +51,13 @@ body {
   transform: rotateY(180deg);
 }
 .card__side--back-1 {
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+  background-image: linear-gradient(to right bottom, #64ffda, #28858a);
 }
 .card__side--back-2 {
-  background-image: linear-gradient(to right bottom, #2998FF, #5643FA);
+  background-image: linear-gradient(to right bottom, #64ffda, #28858a);
 }
 .card__side--back-3 {
-  background-image: linear-gradient(to right bottom, #FFB900, #FF7730);
+  background-image: linear-gradient(to right bottom, #64ffda, #28858a);
 }
 .card:hover .card__side--front {
   transform: rotateY(-180deg);
@@ -67,8 +67,10 @@ body {
 }
 .card__description {
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 0.9rem;
   padding: 1em 0;
+  width: 80%;
+  margin: 0 auto;
 }
 .card__description img {
   width: 1.5em;
