--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary-light: #64ffda;
+$color-primary-dark: #28858a;
 $color-secondary-light: #FFB900;
 $color-secondary-dark: #FF7730;
 $color-tertiary-light: #2998FF;
@@ -58,10 +58,10 @@ body {
                 ;
             }
             &-2 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
             }
             &-3 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
             }
         }
     }
@@ -73,8 +73,10 @@ body {
     }
     &__description {
         text-transform: uppercase;
-        font-size: 2em;
+        font-size: .9rem;
         padding: 1em 0;
+        width: 80%;
+        margin: 0 auto;
         img {
             width: 1.5em;
             height: 1.5em;
