change to myskill

--- a/src/app/myskills/myskills.component.css
+++ b/src/app/myskills/myskills.component.css
@@ -75,4 +75,4 @@ body {
   width: 1.5em;
   height: 1.5em;
   fill: #FFF;
-}/*# sourceMappingURL=test.component.css.map */
+}/*# sourceMappingURL=myskills.component.css.map */
