--- a/src/app/myskills/myskills.component.html
+++ b/src/app/myskills/myskills.component.html
@@ -1,20 +1,5 @@
-<!-- <div class="section">
-    <div class="flip-box-row">
-        <div class="flip-box-column" *ngFor="let item of courses">
-            <div class="flip-box-front">
-                <img src="../../assets/image/{{ item.img }}" class="card-img-top" alt="...">
-                <h4 class="et_pb_module_header">{{item.name }}</h4>
-            </div>
-            <div class="flip-box-back">
-                <img src="http://jason.sandbox.etdevs.com/design/wp-content/uploads/sites/4/2019/01/app-11-1.png" alt="" />
-                <h4 class="et_pb_module_header">App Development</h4>
-                <p>This is a description.</p>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<section class="content row row-cols-sm-1 row-cols-md-2">
+<!-- <section class="content row row-cols-sm-1 row-cols-md-2"> -->
+<section class="content">
     <div class="cards">
         <div class="card">
             <div class="card__side card__side--front card__side--front-1">
