--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" routerLink="/"><span>&#60;</span>/Resume<span>&#62;</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/">Contact me</a>
+                    <a class="nav-link" routerLink="/contact">Contact me</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="https://github.com/nazilaAz"><i class="bi bi-github"></i></a>
