--- a/src/app/contactme/contactme.component.css
+++ b/src/app/contactme/contactme.component.css
@@ -50,7 +50,7 @@ body {
   border-radius: 5px;
   float: left;
   width: 100%;
-  background-color: #eb524a;
+  background-color: #3b5998;
 }
 .contact main section .content {
   float: left;
@@ -100,7 +100,7 @@ body {
 .contact main .title {
   float: left;
   width: 100%;
-  background-color: #c63535;
+  background-color: #3b5998;
   max-height: 0px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
