--- a/src/app/contactme/contactme.component.scss
+++ b/src/app/contactme/contactme.component.scss
@@ -109,7 +109,7 @@ body {
             border-radius: 5px;
             float: left;
             width: 100%;
-            background-color: $color-1;
+            background-color: $facebook;
             .content {
                 float: left;
                 width: 100%;
@@ -153,7 +153,7 @@ body {
         .title {
             float: left;
             width: 100%;
-            background-color: $color-2;
+            background-color: $facebook;
             max-height: 0px;
             border-bottom-left-radius: 5px;
             border-bottom-right-radius: 5px;
