--- a/src/app/bothsideaside/bothsideaside.component.html
+++ b/src/app/bothsideaside/bothsideaside.component.html
@@ -20,7 +20,9 @@
     <div class="row sidebarright">
         <div class="col align-self-start ">
 
-
+            <a href="mailto:azabdaftar@outlook.com?subject=contact&body = Message">
+                azabdaftar@outlook.com
+                </a>
 
 
 
