new Style with css particles

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="container-name text-center">
+<!--<div class="container-name text-center">
     <div class="row row-cols-auto gx-5">
         <div class="col">
             <div class="p-3"><img src="../../assets/image/iam.png" class="img-thumbnail" alt="I am"></div>
@@ -9,4 +9,23 @@
             <div class="p-3 text-start desc">I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Front-End.</div>
         </div>
     </div>
-</div>
+</div>-->
+<section class="home common">
+    <div class="shape">
+        <img class="shape1" src="../../assets/image/shape.png">
+        <img class="shape2" src="../../assets/image/shape.png">
+        <img class="shape3" src="../../assets/image/shape.png">
+        <!--<img class="shape4" src="../../assets/image/shape.png">-->
+        <img class="shape5" src="../../assets/image/shape.png">
+    </div>
+    <div class="home-inner">
+        <div class="text">
+            <h5>Full-Stack Developer</h5>
+            <h1>Nazila</h1>
+            <p>I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Frontend and Backend.</p>
+            <a href="#" class="btn">Learn about me</a>
+
+        </div>
+        <img src="../../assets/image/iam.png">
+    </div>
+</section>
