--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,69 +1,19 @@
-<!-- <div class="section">
-    <div class="flip-box-row">
-        <div class="flip-box-column" *ngFor="let item of courses">
-            <div class="flip-box-front">
-                <img src="../../assets/image/{{ item.img }}" class="card-img-top" alt="...">
-                <h4 class="et_pb_module_header">{{item.name }}</h4>
-            </div>
-            <div class="flip-box-back">
-                <img src="http://jason.sandbox.etdevs.com/design/wp-content/uploads/sites/4/2019/01/app-11-1.png" alt="" />
-                <h4 class="et_pb_module_header">App Development</h4>
-                <p>This is a description.</p>
-            </div>
-        </div>
+<section class="home common">
+    <div class="shape">
+        <img class="shape1" src="../../assets/image/shape.png">
+        <img class="shape2" src="../../assets/image/shape.png">
+        <img class="shape3" src="../../assets/image/shape.png">
+        <!--<img class="shape4" src="../../assets/image/shape.png">-->
+        <img class="shape5" src="../../assets/image/shape.png">
     </div>
-</div> -->
+    <div class="home-inner">
+        <div class="text">
+            <h5>Full-Stack Developer</h5>
+            <h1>Nazila</h1>
+            <p>I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Frontend and Backend.</p>
+            <a href="#" class="btn">Learn about me</a>
 
-<section class="content row row-cols-sm-1 row-cols-md-2">
-    <div class="cards">
-        <div class="card">
-            <div class="card__side card__side--front card__side--front-1">
-                <div class="card__description">{{ courses[0]["name"]}}</div>
-                <img src="../../assets/image/{{ courses[0].img }}" class="card-img-top" alt="...">
-            </div>
-            <div>
-                <div class="card__side card__side--back card__side--back-1">
-                    <div class="card__description" *ngFor="let front of frontend">
-                        <!-- {{ front["name"]}} -->
-                        <img src="../../assets/image/{{ front.img }}" class="card-img-topFront" alt="...">
-                        <div class="progress" role="progressbar" attr.aria-valuenow="{{front.percent}}" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar progress-bar-striped" [style.width]="front.percent+'%'" [style.background-color]="front.color">{{front.percent}}%</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-
-        <div class="card">
-            <div class="card__side card__side--front card__side--front-3">
-                <div class="card__description">{{ courses[1]["name"]}}</div>
-                <img src="../../assets/image/{{ courses[1].img }}" class="card-img-top" alt="...">
-            </div>
-            <div class="card__side card__side--back card__side--back-3">
-                <div class="card__description" *ngFor="let back of backend">
-                    <!-- {{ back.name}} -->
-                    <img src="../../assets/image/{{ back.img }}" class="card-img-topFront" alt="...">
-                    <div class="progress" role="progressbar" attr.aria-valuenow="{{back.percent}}" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped" [style.width]="back.percent+'%'" [style.background-color]="back.color">{{back.percent}}%</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card__side card__side--front card__side--front-3">
-                <div class="card__description">{{ courses[2]["name"]}}</div>
-                <img src="../../assets/image/{{ courses[2].img }}" class="card-img-top" alt="...">
-            </div>
-            <div class="card__side card__side--back card__side--back-3">
-                <div class="card__description" *ngFor="let version of vcontrol">
-                    <!-- {{ version.name}} -->
-                    <img src="../../assets/image/{{ version.img }}" class="card-img-topFront" alt="...">
-                    <div class="progress" role="progressbar" attr.aria-valuenow="{{version.percent}}" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped" [style.width]="version.percent+'%'" [style.background-color]="version.color">{{version.percent}}%</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <img src="../../assets/image/iam.png">
     </div>
-
 </section>
