--- a/src/app/bothsideaside/bothsideaside.component.css
+++ b/src/app/bothsideaside/bothsideaside.component.css
@@ -109,7 +109,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  background-color: #0a192f;
+  background-color: #071f30;
   color: hsl(0, 0%, 100%);
   overflow-x: hidden;
   padding: 0%;
@@ -117,18 +117,22 @@
   left: 0.7rem;
 }
 .container-sidebar .sidebarright {
-  height: 100vh;
   width: 4.4rem;
   position: fixed;
-  top: 0.5rem;
+  bottom: 0.8rem;
   right: 0.78rem;
-  background-color: #0a192f;
+  background-color: #071f30;
   color: hsl(0, 0%, 100%);
   overflow-x: hidden;
   padding: 0%;
-  z-index: -1;
 }
 .container-sidebar .sidebarright p {
   writing-mode: vertical-rl;
   text-orientation: mixed;
+}
+.container-sidebar .sidebarright a {
+  text-decoration: none;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 500;
 }/*# sourceMappingURL=bothsideaside.component.css.map */
