--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -5,21 +5,132 @@
   box-sizing: 0;
 }
 
-.container-name {
-  width: 60vw;
-  margin: 5rem auto;
-  background-color: #0a192f;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 }
-.container-name .row .col .hi {
-  font-size: 1rem;
-  color: #64ffda;
+
+.home h5 {
+  position: relative;
+  text-transform: uppercase;
+  font-size: 18px;
 }
-.container-name .row .col .name {
-  font-family: "Righteous", cursive;
-  color: #ccd6f6;
+.home h5::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -30px;
+  width: 60px;
+  height: 1px;
+  background-color: #fff;
 }
-.container-name .row .col .desc {
-  font-family: "Righteous", cursive;
-  color: #8892b0;
-  line-height: 2;
+.home h1 {
+  font-size: 64px;
+  text-transform: uppercase;
+}
+.home p {
+  font-size: 18px;
+  line-height: 30px;
+  color: #8d9eaa;
+  margin: 30px 0 60px;
+}
+.home .btn {
+  font-size: 18px;
+  color: #fff;
+  text-decoration: none;
+  padding: 15px 20px;
+  border: 1px solid rgba(255, 255, 255, 0.2509803922);
+}
+.home .btn:hover {
+  background-color: rgba(255, 255, 255, 0.2509803922);
+}
+.home .home-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .home-inner a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+}
+.home .text {
+  max-width: 250px;
+  text-align: right;
+  margin-right: 60px;
+}
+.home .shape img {
+  position: absolute;
+  width: 100%;
+  z-index: -9;
+}
+.home .shape .shape1 {
+  right: 0;
+  top: 50px;
+  width: 300px;
+  opacity: 0.5;
+  transform-origin: center;
+  animation: shape linear 30s infinite reverse;
+}
+.home .shape .shape2 {
+  left: -5px;
+  bottom: 14rem;
+  width: 350px;
+  padding-left: 5rem;
+  opacity: 0.5;
+  transform-origin: center;
+  animation: shape linear 30s infinite reverse;
+}
+@keyframes shape {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.home .shape .shape3 {
+  left: 0;
+  top: 0;
+  width: 250px;
+  padding-left: 5rem;
+  opacity: 0.4;
+  transform-origin: center;
+  animation: shape3 linear 20s infinite;
+  transform: translate(-200px, -100px) rotate(0deg);
+}
+@keyframes shape3 {
+  100% {
+    transform: translate(1300px, 600px) rotate(360deg);
+  }
+}
+.home .shape .shape4 {
+  left: 0;
+  bottom: 0;
+  width: 150px;
+  padding-left: 5rem;
+  opacity: 0.4;
+  transform-origin: center;
+  animation: shape4 linear 20s infinite 5s;
+  transform: translate(700px, 80px) rotate(0deg);
+}
+@keyframes shape4 {
+  100% {
+    transform: translate(1200px, -800px) rotate(360deg);
+  }
+}
+.home .shape .shape5 {
+  left: 500px;
+  width: 120px;
+  padding-left: 5rem;
+  opacity: 0;
+  transform-origin: center;
+  animation: shape5 linear 25s infinite;
+  transform: translate(0, -150px) rotate(0deg);
+}
+@keyframes shape5 {
+  100% {
+    transform: translate(0, 800px) rotate(720deg);
+  }
 }/*# sourceMappingURL=homepage.component.css.map */
