--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 .mainnav .bg-dark {
-  background-color: #0a192f !important;
+  background-color: #071F30 !important;
 }
 .mainnav .navTxt {
   color: #ccd6f6;
@@ -16,6 +16,9 @@
 }
 .mainnav nav {
   padding: 0 3rem;
+}
+.mainnav nav ul li:last-child {
+  margin-right: 0;
 }
 .mainnav nav #navbarNav .navbar-nav a {
   background-image: linear-gradient(to right, #64ffda, #64ffda 50%, #ccd6f6 50%);
