--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,20 +1,160 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&display=swap');
 $color-primary-light: #bff8eb;
 $color-primary-dark: #aff4f8;
 $color-secondary-light: #FFB900;
 $color-secondary-dark: #FF7730;
 $color-tertiary-light: #2998FF;
 $color-tertiary-dark: #5643FA;
+$color-white: #fff;
 *,
 *::after,
 *::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    outline: none;
 }
 
-body {
-    font-family: "Open Sans", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+}
+
+.home {
+    h5 {
+        position: relative;
+        text-transform: uppercase;
+        font-size: 18px;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: -30px;
+            width: 60px;
+            height: 1px;
+            background-color: $color-white;
+        }
+    }
+    h1 {
+        font-size: 64px;
+        text-transform: uppercase;
+    }
+    p {
+        font-size: 18px;
+        line-height: 30px;
+        color: #8d9eaa;
+        margin: 30px 0 60px;
+    }
+    .btn {
+        font-size: 18px;
+        color: $color-white;
+        text-decoration: none;
+        padding: 15px 20px;
+        border: 1px solid #ffffff40;
+        &:hover {
+            background-color: #ffffff40;
+        }
+    }
+    .home-inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        a {
+            text-decoration: none;
+            color: $color-white;
+            text-transform: uppercase;
+        }
+    }
+    .text {
+        max-width: 250px;
+        text-align: right;
+        margin-right: 60px;
+    }
+    .shape {
+        img {
+            position: absolute;
+            width: 100%;
+            z-index: -9;
+        }
+        .shape1 {
+            right: 0;
+            top: 50px;
+            width: 300px;
+            // padding-left: 5rem;
+            opacity: .5;
+            transform-origin: center;
+            animation: shape linear 30s infinite reverse;
+        }
+        .shape2 {
+            left: -5px;
+            bottom: 14rem;
+            width: 350px;
+            padding-left: 5rem;
+            opacity: .5;
+            transform-origin: center;
+            animation: shape linear 30s infinite reverse;
+        }
+        @keyframes shape {
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+        .shape3 {
+            left: 0;
+            top: 0;
+            width: 250px;
+            padding-left: 5rem;
+            opacity: .4;
+            transform-origin: center;
+            animation: shape3 linear 20s infinite;
+            transform: translate(-200px, -100px) rotate(0deg);
+        }
+        @keyframes shape3 {
+            100% {
+                transform: translate(1300px, 600px) rotate(360deg);
+            }
+        }
+        .shape4 {
+            left: 0;
+            bottom: 0;
+            width: 150px;
+            padding-left: 5rem;
+            opacity: .4;
+            transform-origin: center;
+            animation: shape4 linear 20s infinite 5s;
+            transform: translate(700px, 80px) rotate(0deg);
+        }
+        @keyframes shape4 {
+            100% {
+                transform: translate(1200px, -800px) rotate(360deg);
+            }
+        }
+        .shape5 {
+            left: 500px;
+            width: 120px;
+            padding-left: 5rem;
+            opacity: 0;
+            transform-origin: center;
+            animation: shape5 linear 25s infinite;
+            transform: translate(0, -150px) rotate(0deg);
+        }
+        @keyframes shape5 {
+            100% {
+                transform: translate(0, 800px) rotate(720deg);
+            }
+        }
+    }
+}
+
+.common {
+    padding: 70px 0;
+    min-height: 100vh;
+    position: relative;
 }
 
 .content {
@@ -34,6 +174,9 @@ body {
     position: relative;
     height: 9em;
     perspective: 150em;
+    .circle {
+        border-radius: 50%;
+    }
     &__side {
         // position: absolute;
         top: 0;
