--- a/src/app/skill/skill.component.css
+++ b/src/app/skill/skill.component.css
@@ -1,104 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
-.container {
-  height: auto;
-  margin: 5rem auto;
-}
-.container .card-container {
+.card {
+  margin-top: 5rem;
   position: relative;
-  flex-wrap: wrap;
+  width: 20rem;
+  height: 10rem;
+  background: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 1.9rem 4.4rem rgba(0, 0, 0, 0.15);
+  transition: 0.5s;
+}
+.card:hover {
+  height: 25rem;
+}
+.card:hover .imgBx {
+  width: 13.8rem;
+  height: 13.8rem;
+}
+.card .imgBx {
+  position: absolute;
+  left: 50%;
+  top: -2.7rem;
+  transform: translate(-50%);
+  width: 8.3rem;
+  height: 8.3rem;
+  background: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 0.8rem 2.7rem rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  transition: 0.5s;
+}
+.card .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card .content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: auto;
-}
-.container .card {
-  min-width: 275px;
-  width: 275px;
-  margin: 15px 15px;
-  height: 350px;
-  border-radius: 7px;
-  background-size: cover;
-  background: rgba(0, 0, 0, 0.2);
-  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
-  transition: 0.2s all linear;
-  border: 1px solid rgba(128, 128, 128, 0.15);
-  box-sizing: border-box;
-  text-align: center;
-  color: white;
-}
-.container .card img {
-  width: 60%;
-  height: auto;
-}
-.container .card .card-img-top {
-  align-self: center;
-  padding: 0.9rem 0;
-}
-.container .card .card-img-topFront {
-  width: 20%;
-  height: auto;
-  align-self: center;
-  padding: 0.8rem 0;
-}
-.container .card .card-body .progress {
-  --bs-progress-bar-color: black !important;
-}
-.container .card .card-image {
-  width: 100%;
-  height: 275px;
-  position: relative;
-  top: 3rem;
-  background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2211976/365_the_end_1x.png");
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-}
-.container .card .card-info {
-  position: relative;
-  width: 100%;
-  height: 35px;
-  line-height: 35px;
-  top: 0px;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  font-family: "Open Sans";
-  color: rgba(255, 255, 255, 0.85);
-}
-.container .card .card-info .card-title {
-  line-height: 35px;
-  height: 35px;
-  position: relative;
-  top: 2rem;
-  font-size: 25px;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.6);
-  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
-}
-.container .card .card-info .card-detail {
-  line-height: 1.5em;
-  font-size: 1em;
-  height: auto;
-  background: rgba(0, 0, 0, 0.6);
-  position: relative;
-  top: 5px;
-  padding: 5px 20px 0px 20px;
-  opacity: 0;
-  transform: scaleY(0);
-  transform-origin: center top;
-  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
-}
-.container .card:hover {
-  box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-}
-.container .card:hover .card-info .card-title {
-  box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-  transition: 0.3s all linear;
-}
-.container .card:hover .card-info .card-detail {
-  opacity: 1;
-  box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-  transition: 0.35s all linear;
-  transition-delay: 0.1s;
-  transform: translate(360px, 0);
+  justify-content: center;
+  align-items: flex-end;
 }/*# sourceMappingURL=skill.component.css.map */
