--- a/src/app/skill/skill.component.scss
+++ b/src/app/skill/skill.component.scss
@@ -2,122 +2,157 @@
 $backGr-main:#0a192f;
 $fontColor-first: #ccd6f6;
 $greencolor:#64ffda;
-.container {
-    // width: 85%;
-    height: auto;
-    margin: 5rem auto;
-    .card-container {
-        position: relative;
-        flex-wrap: wrap;
+$color-white:#fff;
+.card {
+    margin-top: 5rem;
+    position: relative;
+    width: 20rem;
+    height: 10rem;
+    background: $color-white;
+    border-radius: 1rem;
+    box-shadow: 0 1.9rem 4.4rem rgb(0, 0, 0, 0.15);
+    transition: .5s;
+    &:hover {
+        height: 25rem;
+        .imgBx {
+            width: 13.8rem;
+            height: 13.8rem;
+        }
+    }
+    .imgBx {
+        position: absolute;
+        left: 50%;
+        top: -2.7rem;
+        transform: translate(-50%);
+        width: 8.3rem;
+        height: 8.3rem;
+        background: $color-white;
+        border-radius: 1rem;
+        box-shadow: 0 .8rem 2.7rem rgba(0, 0, 0, 0.15);
         overflow: hidden;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        display: flex;
-        justify-content: space-around;
-        align-items: auto;
-    }
-    .card {
-        min-width: 275px;
-        width: 275px;
-        // position: relative;
-        margin: 15px 15px;
-        height: 350px;
-        border-radius: 7px;
-        background-size: cover;
-        background: rgba(0, 0, 0, 0.2);
-        box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
-        transition: 0.2s all linear;
-        border: 1px solid rgba(128, 128, 128, 0.15);
-        box-sizing: border-box;
-        text-align: center;
-        color: white;
+        transition: .5s;
         img {
-            width: 60%;
-            height: auto;
-        }
-        .card-img-top {
-            align-self: center;
-            padding: .9rem 0;
-        }
-        .card-img-topFront {
-            width: 20%;
-            height: auto;
-            align-self: center;
-            padding: .8rem 0;
-        }
-        .card-body {
-            .progress {
-                --bs-progress-bar-color: black !important;
-            }
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
-    .card .card-image {
+    .content {
+        position: absolute;
         width: 100%;
-        height: 275px;
-        position: relative;
-        top: 3rem;
-        background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2211976/365_the_end_1x.png");
-        border-top-right-radius: 5px;
-        border-top-left-radius: 5px;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
     }
-    .card .card-info {
-        position: relative;
-        width: 100%;
-        height: 35px;
-        line-height: 35px;
-        // top: -265px;
-        top: 0px;
-        border-top-right-radius: 5px;
-        border-top-left-radius: 5px;
-        font-family: "Open Sans";
-        color: rgba(255, 255, 255, 0.85);
-    }
-    .card .card-info .card-title {
-        line-height: 35px;
-        height: 35px;
-        position: relative;
-        top: 2rem;
-        font-size: 25px;
-        text-align: center;
-        background: rgba(0, 0, 0, 0.6);
-        box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
-    }
-    .card .card-info .card-detail {
-        line-height: 1.5em;
-        font-size: 1em;
-        // height: 220px;
-        height: auto;
-        background: rgba(0, 0, 0, 0.6);
-        position: relative;
-        top: 5px;
-        padding: 5px 20px 0px 20px;
-        opacity: 0;
-        transform: scaleY(0);
-        transform-origin: center top;
-        box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
-    }
-    .card:hover {
-        box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-    }
-    .card:hover .card-info .card-title {
-        box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-        transition: 0.3s all linear;
-    }
-    .card:hover .card-info .card-detail {
-        opacity: 1;
-        box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
-        transition: 0.35s all linear;
-        transition-delay: 0.1s;
-        // transform: scaleY(1);
-        transform: translate(360px, 0);
-    }
-    // .card:nth-of-type(2) .card-image {
-    //     background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2164720/337_writing_blog_post_1x.png");
-    // }
-    // .card:nth-of-type(3) .card-image {
-    //     background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2377046/kaylo_ren_lighsaber_800x600_1x.png");
-    // }
-    // .card:nth-of-type(4) .card-image {
-    //     background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2203790/362_chasing_dreams_1x.png");
-    // }
 }
+
+// .container {
+//     height: auto;
+//     margin: 5rem auto;
+//     .card-container {
+//         position: relative;
+//         flex-wrap: wrap;
+//         overflow: hidden;
+//         padding-top: 15px;
+//         padding-bottom: 15px;
+//         display: flex;
+//         justify-content: space-around;
+//         align-items: auto;
+//     }
+//     .card {
+//         min-width: 275px;
+//         width: 275px;
+//         margin: 15px 15px;
+//         height: 350px;
+//         border-radius: 7px;
+//         background-size: cover;
+//         background: rgba(0, 0, 0, 0.2);
+//         box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
+//         transition: 0.2s all linear;
+//         border: 1px solid rgba(128, 128, 128, 0.15);
+//         box-sizing: border-box;
+//         text-align: center;
+//         color: white;
+//         img {
+//             width: 60%;
+//             height: auto;
+//         }
+//         .card-img-top {
+//             align-self: center;
+//             padding: .9rem 0;
+//         }
+//         .card-img-topFront {
+//             width: 20%;
+//             height: auto;
+//             align-self: center;
+//             padding: .8rem 0;
+//         }
+//         .card-body {
+//             .progress {
+//                 --bs-progress-bar-color: black !important;
+//             }
+//         }
+//     }
+//     .card .card-image {
+//         width: 100%;
+//         height: 275px;
+//         position: relative;
+//         top: 3rem;
+//         background-image: url("https://d13yacurqjgara.cloudfront.net/users/150724/screenshots/2211976/365_the_end_1x.png");
+//         border-top-right-radius: 5px;
+//         border-top-left-radius: 5px;
+//     }
+//     .card .card-info {
+//         position: relative;
+//         width: 100%;
+//         height: 35px;
+//         line-height: 35px;
+//         top: 0px;
+//         border-top-right-radius: 5px;
+//         border-top-left-radius: 5px;
+//         font-family: "Open Sans";
+//         color: rgba(255, 255, 255, 0.85);
+//     }
+//     .card .card-info .card-title {
+//         line-height: 35px;
+//         height: 35px;
+//         position: relative;
+//         top: 2rem;
+//         font-size: 25px;
+//         text-align: center;
+//         background: rgba(0, 0, 0, 0.6);
+//         box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
+//     }
+//     .card .card-info .card-detail {
+//         line-height: 1.5em;
+//         font-size: 1em;
+//         height: auto;
+//         background: rgba(0, 0, 0, 0.6);
+//         position: relative;
+//         top: 5px;
+//         padding: 5px 20px 0px 20px;
+//         opacity: 0;
+//         transform: scaleY(0);
+//         transform-origin: center top;
+//         box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
+//     }
+//     .card:hover {
+//         box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
+//     }
+//     .card:hover .card-info .card-title {
+//         box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
+//         transition: 0.3s all linear;
+//     }
+//     .card:hover .card-info .card-detail {
+//         opacity: 1;
+//         box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.3);
+//         transition: 0.35s all linear;
+//         transition-delay: 0.1s;
+//         // transform: scaleY(1);
+//         transform: translate(360px, 0);
+//     }
+// }
